adding lucasarts/disney copywrite notice to download page

--- a/download.html
+++ b/download.html
@@ -317,6 +317,13 @@
                     Credits
                 </a>
             </p>
+            <p Title="Star Wars copyright notices.">
+                JEDI KNIGHT GALAXIES AND ITS CONTENTS ARE NOT MADE, DISTRIBUTED, OR SUPPORTED BY ACTIVISION PUBLISHING, INC., RAVEN SOFTWARE, 
+                OR LUCASARTS ENTERTAINMENT COMPANY, LLC. ELEMENTS™ & © LUCASFILM LTD.™ & DISNEY, INC.™ AND/OR ITS LICENSORS. STAR WARS®, 
+                JEDI®, & JEDI KNIGHT® ARE REGISTERED TRADEMARKS OF LUCASFILM LTD™ AND WALT DISNEY, INC.™ STAR WARS®, JEDI®, & JEDI KNIGHT® 
+                ARE REGISTERED TRADEMARKS OF LUCASFILM LTD™ & DISNEY, INC.™ ALL LOGOS, IMAGES AND ANY OTHER TYPES OF MATERIALS ARE THE PROPERTY 
+                OF THEIR RESPECTFUL OWNERS.
+            </p>
         </div>
     </div>
 
