adding server guide faq

--- a/faq.html
+++ b/faq.html
@@ -117,6 +117,18 @@
             <p>Jedi Knight Galaxies is a much loved hobby project created by developers who work on it in their freetime, with contributions from the community and volunteers.  The current team and significant contributors can be found <a href="./contributors.html">here.</a></p>
         </div>
 
+        <div class="maindiv" id="serverhost">
+            <h2>How can I host a JKG Server?</h2>
+            <p>
+                First, thanks for your interesting in hosting a JKG server, each one helps us out.  There are three different types of servers you can host:
+                <ul>
+                    <li><b>LAN Server</b> - A local area network server, useful if you want to do a private LAN party with your friends at home.</li>
+                    <li><b>Home Hosted</b> - A home hosted internet server, great if you have your own hardware and an ISP willing to let you host at home.</li>
+                    <li><b>Rented Server</b> - An internet server hosted on the cloud by a provider such as Asutech, great if you don't want to worry about your own hardware or want to host a server in a different location.</li>
+                </ul>
+                Regardless of which type of server you plan to use, you may find <a href="https://github.com/JKGDevs/JediKnightGalaxies/wiki/Server-Guide-(Phase-I)" title="Server Setup Guide on JKG Wiki.">this JKG Server Setup</a> guide useful.
+            </p>
+
         <div class="maindiv" id="timeperiod">
             <h2>What time period is JKG set in?</h2>
             <p>
