forgot to close a div tag

--- a/faq.html
+++ b/faq.html
@@ -128,6 +128,7 @@
                 </ul>
                 Regardless of which type of server you plan to use, you may find <a href="https://github.com/JKGDevs/JediKnightGalaxies/wiki/Server-Guide-(Phase-I)" title="Server Setup Guide on JKG Wiki.">this JKG Server Setup</a> guide useful.
             </p>
+        </div>
 
         <div class="maindiv" id="timeperiod">
             <h2>What time period is JKG set in?</h2>
