updating some descriptions on the about page and metadata

--- a/contributors.html
+++ b/contributors.html
@@ -3,7 +3,7 @@
     <head>
         <title>JKG Contributors</title>
         <meta charset="utf-8">
-        <meta name="Description" content="Jedi Knight Galaxies Team, Contributors and Credits.">
+        <meta name="Description" content="Jedi Knight Galaxies Team, Contributors, and Credits.">
         <meta name="Copyright" content="Jedi Knight Galaxies Team">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Language" content="English">
