--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
         <meta name="msapplication-TileColor" content="#010412">
         <meta name="msapplication-TileImage" content="images/JKG_logo-inverted-144x144.png">
         
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" onload="this.media='all'">
+        <link async rel="stylesheet" href="styles.css">
     </head>
     <body class="AboutPage">
         <div id="navbar">
