updating most often used images to webp (logo) and small adjustments to page layouts

--- a/400.html
+++ b/400.html
@@ -17,7 +17,7 @@
     </head>
     <body class="400Page">
         <div id="navbar">
-            <img id="navbarLogoImg" src="https://www.jkgalaxies.net/images/jkg_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
+            <img id="navbarLogoImg" src="https://www.jkgalaxies.net/images/jkg_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
             <a href="https://www.jkgalaxies.net/index.html" alt="Go to JKG home page.">Home</a>
             <a href="https://www.jkgalaxies.net/download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="https://www.jkgalaxies.net/about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
@@ -27,7 +27,8 @@
         </div>
                 
             <div class="logo" id="logo">
-                <img src="https://www.jkgalaxies.net/images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="768" height="340">
+                <br>
+                <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="728" height="305">
             </div>
         
             <h1>400 <br> Bad Request</h1>
