--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </head>
     <body class="AboutPage">
         <div id="navbar">
-            <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
+            <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
             <a href="index.html" title="Home page." alt="Go to JKG home page.">Home</a>
             <a href="download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
             <a href="about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
@@ -39,7 +39,8 @@
         </div>
         
         <div class="logo" id="logo">
-            <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="768" height="340">
+            <br>
+            <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="728" height="305">
         </div>
 
         <h1>About</h1>
