--- a/faq.html
+++ b/faq.html
@@ -53,13 +53,13 @@
 
             <div class="cookie-banner" id="cookieBanner">
                 <p>
-                    In order to display embedded <a href="http://www.youtube.com/watch?v=vJnh-hNendI" title="Click here to view the video directly on YouTube." target="_blank">YouTube videos</a>, you must first opt-in to allow <a href="./legal.html#thirdparty" title="View our legal and cookie policy here.">3rd party cookies</a>  from <a href="https://policies.google.com/privacy" title="Click here to view YouTube/Google's terms.">Google</a>.  This feature is disabled until you opt in.
+                    In order to display embedded <a href="http://www.youtube.com/watch?v=vJnh-hNendI" title="Click here to view the video directly on YouTube." target="_blank">this YouTube video</a>, you must first opt-in to allow <a href="./legal.html#thirdparty" title="View our legal and cookie policy here.">3rd party cookies</a>  from <a href="https://policies.google.com/privacy" title="Click here to view YouTube/Google's terms.">Google</a>.  This feature is disabled until you opt in.
                 </p>
-                <button onclick="acceptCookies('youtubevids', 'cookieBanner')">Allow</button>
+                <button onclick="acceptCookiesYoutube('youtubevids', 'cookieBanner', 'https://www.youtube.com/embed/vJnh-hNendI', 'youtubevids')">Allow</button>
             </div>
 
             <div id="youtubevids" class="embed-responsive embed-responsive-16by9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vJnh-hNendI"
+                <iframe width="560" height="315" src=""
                         frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope;
                 picture-in-picture" allowfullscreen alt="Gameplay Video" class="embed-responsive-item">
                 </iframe>
