one more thing jackie! (improving wording on discord newsfood cookie message)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="cookie-banner" id="cookieBanner">
                 <p>
-                    In order to display the newsfeed, you must first opt-in to allow <a href="./legal.html#thirdparty" title="View our legal and cookie policy here.">3rd party cookies</a>  from <a href="https://widgetbot.io/cookie" title="Click here to view WidgetBot's terms.">WidgetBot</a>.  This feature is disabled until you opt in.
+                    In order to display the <a href="https://discord.gg/YuG8Zks" alt="Discord server invite link." title="Click to access Discord directly.">Discord</a> newsfeed, you must first opt-in to allow <a href="./legal.html#thirdparty" title="View our legal and cookie policy here.">3rd party cookies</a>  from <a href="https://widgetbot.io/cookie" title="Click here to view WidgetBot's terms.">WidgetBot</a>.  This feature is disabled until you opt in.
                 </p>
                 <button onclick="acceptCookiesJavascript('widgetbotdiv', 'cookieBanner', 'https://cdn.jsdelivr.net/npm/@widgetbot/html-embed')">Allow</button>
             </div>
