Grammar fixes for cookie blockers.

--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@
 
             <div class="cookie-banner" id="cookieBanner">
                 <p>
-                    In order to display embedded <a href="http://www.youtube.com/watch?v=vJnh-hNendI" title="Click here to view the video directly on YouTube." target="_blank">this YouTube video</a>, you must first opt-in to allow <a href="./legal.html#thirdparty" title="View our legal and cookie policy here.">3rd party cookies</a>  from <a href="https://policies.google.com/privacy" title="Click here to view YouTube/Google's terms.">Google</a>.  This feature is disabled until you opt in.
+                    To display the embedded <a href="http://www.youtube.com/watch?v=vJnh-hNendI" title="View the video directly on YouTube here." target="_blank">YouTube video</a>, you must first opt-in to allow <a href="./legal.html#thirdparty" title="View our legal and cookie policy here.">3rd party cookies</a>  from <a href="https://policies.google.com/privacy" title="Click here to view YouTube/Google's terms.">Google</a>.  This feature is disabled until you opt in.
                 </p>
                 <button onclick="acceptCookiesYoutube('youtubevids', 'cookieBanner', 'https://www.youtube.com/embed/vJnh-hNendI', 'youtubevids')">Allow</button>
             </div>
