fixing image link to not be relative in case user attempts a strange path

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
                 
             <div class="logo" id="logo">
                 <br>
-                <img src="images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="728" height="305">
+                <img src="https://www.jkgalaxies.net/images/jkg-big_logo-inverted-dropshadow.webp" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center" width="728" height="305">
             </div>
         
             <h1>404 <br> Page Not Found</h1>
