updating faq, also added css for <code> tags

--- a/download.html
+++ b/download.html
@@ -132,8 +132,8 @@
             you are ready to install. These instructions are also available in the readme provided with each release.
         </p>
         <p>First, navigate to your Jedi Academy install's GameData folder. The GameData
-            folder is typically in the following location if you have Steam: 'SteamLibrary\steamapps\common\Jedi
-            Academy\GameData'. Other types of installs will have a similar location. </p>
+            folder is typically in the following location if you have Steam: <code>SteamLibrary\steamapps\common\Jedi
+            Academy\GameData</code>. Other types of installs will have a similar location. </p>
         <p>Then from the downloaded zip binary, drag and drop the jkgalaxies directory (the one the readme is alongside) into
             Jedi Academy's GameData folder.
             If you have a previous installation of JKG, just replace the jkgalaxies directory with the one in the zip (if you
