changing jpg to jpeg as the server for imgur expects this, otherwise it won't open up full pics with target _blank links

--- a/faq.html
+++ b/faq.html
@@ -312,8 +312,8 @@
             <p>
                 When you first spawn in the game, you will be given a starting blaster pistol and small amount of credits.  You will probably want to increase your equipment arsenal after you earn a few credits.  Credits are earned by killing enemy players or accomplishing objectives.  You can also earn credits in a myriad of otherways such as by participating in a kill, completing objectives/quests, passive credit salary earnings, collecting bounties, selling items, or by destroying enemy equipment.  To spend your credits you'll need to find an NPC shopkeeper and press the +use key while facing them (e).  This will open up the shop dialogue screen where you can see what they have available and purchase items you want.  You can also sell the items to them for half the credits of the original value.  Most vendors will refresh what they have available in their shop regularly throughout the match.  There are typically vendors near your team's spawn point, but they may be located inside of a building or doorway so be sure to check near where you spawn.  Some maps may also have travelling vendors which will wander the map looking to sell their wares.<br>
                 <div class="centerdiv">
-                    <a target="_blank" href="https://i.imgur.com/8Xvd2Sa.jpg" alt="Link to vednor screenshot.">
-                        <img class="img-fluid" src="https://i.imgur.com/8Xvd2Sa.jpg" alt="Screenshot of Vendor" title="A rodian vendor.">
+                    <a target="_blank" href="https://i.imgur.com/8Xvd2Sa.jpeg" alt="Link to vednor screenshot.">
+                        <img class="img-fluid" src="https://i.imgur.com/8Xvd2Sa.jpeg" alt="Screenshot of Vendor" title="A rodian vendor.">
                     </a>
                 </div>
             </p>
